Fix alignment of quicklinks in mobile mode

--- a/sass/layouts/responsive-sidebars.scss
+++ b/sass/layouts/responsive-sidebars.scss
@@ -284,8 +284,8 @@ $zen-auto-include-item-base: false;
 
         li {
           text-align: center;
-          display: inline-block;
-          padding: .17em .25em 0 .25em;
+          display: table-cell;
+          padding: 0.17em 0.25em 0 0.25em;
 
           &:not(:first-child):before {
             content: "";
